# black-body-calculator

./: .gitmodules  CMakeLists.txt  README.md
src/: blackbody.c  blackbody.h  cie_xyz.c  cie_xyz.h  main.c  units.h  util.h
test/: blackbody.cpp  cie_xyz.cpp
